# FRIDAY_assignment

./: .gitignore  README.md
address_parser/: .gitignore  README.md  parse_address  pyproject.toml  requirements.txt  setup.py
address_parser/ai_based_parsers/src/: parser_deepparser.py  parser_libpostal.py
address_parser/ai_based_parsers/tests/: test_ai_solutions.py
address_parser/naive_solution/src/: address_parser.py
address_parser/naive_solution/tests/: test_naive_solution.py
ai_based_parsers/src/: main_deepparser.py  main_libpostal.py
ai_based_parsers/tests/: test_ai_solutions.py
naive_solution/src/: address_parser.py
naive_solution/tests/: test_naive_solution.py
