[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "address_parser"
version = "1.0.0"
authors = [
  { name="Natalia Sokołowska", email="sokolowska.natalia.anna@gmail.com" },
]
description = "Three different modules to parse address"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]